<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>    
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equlas">=</string>
    <string name="back">←</string>
    <string name="clean">C</string>
    <string name="virgule">,</string>
    <string name="classic">Класичний</string>
    <string name="modern">Сучасний</string>
    <string name="themes">Скіни</string>
    <string name="aboutProgram">Про Калькулятор</string>
    <string name="about_text">Інформація про Калькулятор</string>

</resources>
