<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/background"
    tools:context=".CalculatorActivity" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="4"
        android:rowCount="6" >

        <EditText
            android:id="@+id/txtResult"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:cursorVisible="false"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:text="@string/zero" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnOne"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/one"
            android:text="@string/one" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/two"
            android:text="@string/two" />

        <Button
            android:id="@+id/btnTree"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_row="1"
            android:contentDescription="@string/tree"
            android:text="@string/tree" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_row="1"
            android:contentDescription="@string/four"
            android:text="@string/four" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_row="2"
            android:contentDescription="@string/five"
            android:text="@string/five" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="2"
            android:contentDescription="@string/six"
            android:text="@string/six" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_row="2"
            android:contentDescription="@string/seven"
            android:onClick="buttonClick"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_row="2"
            android:contentDescription="@string/eight"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_row="3"
            android:contentDescription="@string/nine"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="3"
            android:contentDescription="@string/zero"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnVigule"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_row="3"
            android:contentDescription="@string/virgule"
            android:text="@string/virgule" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_row="3"
            android:contentDescription="@string/back"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_row="4"
            android:contentDescription="@string/plus"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="1"
            android:layout_row="4"
            android:contentDescription="@string/minus"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_row="4"
            android:contentDescription="@string/multiply"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_column="3"
            android:layout_row="4"
            android:contentDescription="@string/divide"
            android:text="@string/divide" />

        <Button
            android:id="@+id/btnEqulas"
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:contentDescription="@string/equlas"
            android:text="@string/equlas" />

        <Button
            android:id="@+id/btnClean"
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:contentDescription="@string/clean"
            android:text="@string/clean" />
    </GridLayout>

</RelativeLayout>